# Pico3D

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  chunk_data.cpp  chunk_data.h  main.cpp  pico_sdk_import.cmake
.github/workflows/: cmake.yml
Blender/: balloon.blend  npc.blend  pico3d_blender_exporter.py  picocean.blend  testmodels.blend  world.blend
docs/: tutorial_blender_export.md  tutorial_blender_materials.md  tutorial_blender_mesh.md
engine/: chunk_globals.h  render_camera.cpp  render_chunk.cpp  render_clipping.cpp  render_culling.cpp  render_globals.h  render_lighting.cpp  render_math.h  render_model.cpp  render_rasterize.cpp  render_sync.cpp  render_triangle.cpp  shader_wireframe.cpp
game/: gate.h  logic_day_night_cycle.cpp  logic_demo.cpp  logic_events.cpp  logic_gate.cpp  logic_globals.h  logic_grass.cpp  logic_info_text.cpp  logic_input.cpp  logic_menu.cpp  logic_npc.cpp  logic_physics.cpp  logic_quest_npcs.cpp  logic_random.cpp  logic_shoot.cpp  logic_zombies.cpp  npc.h  zombie_dead.h  zombie_fast_stand.h
game/gamescom/: balloon.h  balloon_pop.h  logic_balloon.cpp  logic_shoot_balloon.cpp
picocean/: chunk_data_picocean.cpp  chunk_data_picocean.h  grass.h  logic_day_night_cycle.cpp  logic_events.cpp  logic_gate.cpp  logic_globals.h  logic_grass.cpp  logic_info_text.cpp  logic_input.cpp  logic_physics.cpp  logic_shoot.cpp  logic_waves.cpp  logic_zombies.cpp  npcleft.h  npcright.h  zombie_attack.h  zombie_fast_left.h  zombie_fast_right.h  zombie_slouch.h
test_models/: cube.h  plane.h  suzanne.h  test_texture.h
